5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1734_2505.log
== TEST (2019-05-14 18:01:42) 
-- CODE:
from math import factorial
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c<=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:02:16) 
-- CODE:
from math import factorial
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c<=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:02:35) 
-- CODE:
from math import factorial*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c<=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))

-- ERROR:
File "XXXX", line 1
    from math import factorial*
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:02:45) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c<=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))

-- OUTPUT:
-0.3418267
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:03:04) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c>=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))

-- OUTPUT:
1.57079633
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:03:26) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c<=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+1
print(round(senx,8))

-- OUTPUT:
-0.3418267
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:04:30) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c<=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+3
print(round(senx,8))

-- OUTPUT:
0.27886813
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:05:17) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c<=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+4
print(round(senx,8))

-- OUTPUT:
0.27886813
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:05:59) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=0
while(c<=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+3
print(round(senx,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    senx= x+((-1)**c)*(x**c)/c
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:06:44) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=1
while(c<=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))

-- OUTPUT:
-0.3418267
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:06:56) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=2
while(c<=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))

-- OUTPUT:
3.09281337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:07:06) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=2
while(c<=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))

-- OUTPUT:
3.09281337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:07:14) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=4
while(c<=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+2
print(round(senx,8))

-- OUTPUT:
3.09281337
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:08:16) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c<=k):
	senx= x+((-1)**c)*(x**c)/c
	c=c+1
print(round(senx,10))

-- OUTPUT:
-0.3418267031
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:12:13) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c<=k):
	senx= x+((-1)**c)*(x**c)/factorial(c)
	c=c+1
print(round(senx,10))

-- OUTPUT:
1.4911037005
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:12:33) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c<=k):
	senx= x+((-1)**c)*(x**c)/factorial(x)
	c=c+1
print(round(senx,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    senx= x+((-1)**c)*(x**c)/factorial(x)
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:13:43) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c<=k):
	senx= factorial (x+((-1)**c))*(x**c)/c
	c=c+1
print(round(senx,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    senx= factorial (x+((-1)**c))*(x**c)/c
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:14:33) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c<=k):
	senx= factorial (x+((-1)**c))*(x**c)/x
	c=c+1
print(round(senx,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    senx= factorial (x+((-1)**c))*(x**c)/x
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:14:40) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= x
c=3
while(c<=k):
	senx= factorial (x+((-1)**c))*(x**c)/x
	c=c+1
print(round(senx,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    senx= factorial (x+((-1)**c))*(x**c)/x
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:28:11) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx= angulo
c=1
while(c<k):
	senx= senx + (-1)**c*(x**c)/c
	c=c+1
print(round(senx,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    senx= angulo
NameError: name 'angulo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:28:42) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx=x
c=1
while(c<k):
	senx= senx + (-1)**c*(x**c)/c
	c=c+1
print(round(senx,10))

-- OUTPUT:
1.4637894025
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:30:17) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx=x
c=1
while(c<k):
	senx= senx + (-1)**c*(x**c)/factorial(c)
	c=c+1
print(round(senx,10))

-- OUTPUT:
0.8414059605
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:30:49) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx=x
c=1
while(c<k):
	senx= senx + (-1)**c*(x**c)/factorial(c)
	c=c+1
print(round(senx,10))

-- OUTPUT:
0.8414059605
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:31:16) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx=x
c=0
while(c<k):
	senx= senx + (-1)**c*(x**c)/factorial(c)
	c=c+1
print(round(senx,10))

-- OUTPUT:
1.8414059605
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:31:26) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx=x
c=2
while(c<k):
	senx= senx + (-1)**c*(x**c)/factorial(c)
	c=c+1
print(round(senx,10))

-- OUTPUT:
2.4122022873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:31:38) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx=x
c=0
while(c<k):
	senx= senx + (-1)**c*(x**c)/factorial(c)
	c=c+1
print(round(senx,10))

-- OUTPUT:
1.8414059605
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:35:38) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx=x
c=0
while(c<k):
	senx= senx + (-1)**c*(x**(c+3)/factorial(c+3)
	c=c+1
print(round(senx,10))

-- ERROR:
File "XXXX", line 8
    c=c+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:35:50) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx=x
c=0
while(c<k):
	senx= senx + (-1)**c*(x**(c+3)/factorial(c)
	c=c+1
print(round(senx,10))

-- ERROR:
File "XXXX", line 8
    c=c+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:47:02) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
senx=x
c=0
while(c<k):
	senx= senx + (-1)**c*(x**(c+3)/factorial(c+3)
	c=c+1
print(round(senx,10))

-- EXECUTION TIME:
0.192282
-- ERROR:
  File "/home/codebench/codes/1734/2505/main.py", line 8
    c=c+1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:52:32) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
c=0
soma = 0
b = 1
while(c<k):
	sinal = (-1)**c
	soma = soma + sinal*((x**b)/factorial(b))
	c=c+1
	b = b + 2
print(round(senx,10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(round(senx,10))
NameError: name 'senx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:52:54) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
c=0
soma = 0
b = 1
while(c<k):
	sinal = (-1)**c
	soma = soma + sinal*((x**b)/factorial(b))
	c=c+1
	b = b + 2
print(round(soma,10))

-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:53:19) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
c=0
soma = 0
b = 1
while(c<k):
	sinal = (-1)**c
	soma = soma + sinal*((x**b)/factorial(b))
	c=c+1
	b = b + 2
print(round(soma,10))

-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:53:29) 
-- CODE:
from math import*
x=eval(input("angulo: "))
k=int(input("numero em series: "))
c=0
soma = 0
b = 1
while(c<k):
	sinal = (-1)**c
	soma = soma + sinal*((x**b)/factorial(b))
	c=c+1
	b = b + 2
print(round(soma,10))

-- EXECUTION TIME:
0.141675
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
